--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Fix some bug by othree.
+
 This is a mirror of http://www.vim.org/scripts/script.php?script_id=1397
 
 A plugin for editing xml. I used xml.vim (http://www.vim.org/scripts/script.php?script_id=301)
